# srs-rust

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
crates/srs-bindings/: Cargo.toml
crates/srs-bindings/src/: lib.rs
crates/srs-bindings/tests/: blueprint_schema.rs  blueprints.rs  container_view.rs  containers.rs  document_views.rs  record_list.rs  record_mutations.rs  relation_lifecycle.rs  render_document_view.rs  type_schema.rs
crates/srs-bindings/tests/fixtures/: gallery.srsj
crates/srs-cli/: Cargo.toml
crates/srs-cli/schemas/payload/: blueprint-brief.json  blueprint-delete.json  blueprint-get.json  blueprint-list.json  blueprint-schema.json  blueprint-structure.json  blueprint-validate.json  container-create.json  container-delete.json  container-list.json  container-members-add.json  container-members-list.json  container-resolve-view.json  container-roots-add.json  container-roots-list.json  container-validate.json  document-view-create.json  document-view-delete.json  document-view-list-for-container.json  document-view-list.json  extension-get.json  extension-list.json  field-delete.json  field-get.json  field-list.json  find.json  lifecycle-create.json  lifecycle-get.json  lifecycle-list.json  note-foundations.json  note-get.json  note-list.json  note-tag-add.json  note-tag-list.json  note-tag-map.json  note-tag-remove.json  package-create.json  package-import.json  package-list.json  package-refs.json  (+50 more)
crates/srs-cli/src/: lib.rs  main.rs  output.rs  payload.rs
crates/srs-cli/src/commands/: blueprint.rs  container.rs  document_view.rs  extension.rs  field.rs  find.rs  lifecycle.rs  migrate.rs  mod.rs  note.rs  package.rs  protocol.rs  record.rs  record_type.rs  relation.rs  relation_type.rs  render.rs  repo.rs  tag.rs  term.rs  theme.rs  tree.rs  view.rs  vocabulary.rs
crates/srs-cli/tests/: integration_tests.rs  payload_contracts.rs  theme_commands.rs
crates/srs-cli/tests/fixtures/field-groups/: manifest.json
crates/srs-cli/tests/fixtures/field-groups/package/: package.json
crates/srs-cli/tests/fixtures/field-groups/package/document-views/: json-projection-view.json
crates/srs-cli/tests/fixtures/field-groups/package/fields/: name.json  value.json
crates/srs-cli/tests/fixtures/field-groups/package/types/: grouped-type.json
crates/srs-cli/tests/fixtures/field-groups/records/groups/: missing-group.json  valid.json
crates/srs-cli/tests/fixtures/repeatable-fields/: manifest.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/: package.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/document-views/: bad-semantic-type-view.json  deep-offset-view.json  json-hidden-field-view.json  labeled-field-view.json  missing-theme-view.json  repeatable-doc-view.json  themed-document-view.json  title-field-view.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/fields/: body.json  title.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/themes/: base-theme.json  print-theme.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/types/: repeatable-type.json
crates/srs-cli/tests/fixtures/repeatable-fields/package/views/: hidden-field-view.json  labeled-body-view.json
crates/srs-cli/tests/fixtures/repeatable-fields/records/repeatable/: too-many.json  valid.json
crates/srs-cli/tests/fixtures/rfc008-container-subset/: manifest.json
crates/srs-cli/tests/fixtures/rfc008-container-subset/containers/: main.json
crates/srs-cli/tests/fixtures/rfc008-container-subset/package/: package.json
crates/srs-cli/tests/fixtures/rfc008-container-subset/records/: table-1.json  table-2.json  text-1.json  text-2.json
crates/srs-cli/tests/fixtures/rfc008-container-subset/relations/: relations.json
crates/srs-core/: Cargo.toml
crates/srs-core/src/: error.rs  lib.rs
crates/srs-core/src/types/: address.rs  blueprint.rs  container.rs  field.rs  lifecycle.rs  mod.rs  note.rs  protocol.rs  record.rs  record_type.rs  relation.rs  relation_type_definition.rs  revision.rs  tag_definition.rs  term.rs  theme.rs  view.rs  vocabulary.rs
crates/srs-core/src/validation/: blueprint.rs  container.rs  field.rs  lifecycle.rs  mod.rs  note.rs  protocol.rs  record.rs  record_type.rs  relation.rs  relation_type_definition.rs  tag_definition.rs  theme.rs  view.rs  vocabulary.rs
crates/srs-gov/: Cargo.toml
crates/srs-gov/assets/: governance-seed.srsj
crates/srs-gov/src/: governance.rs  main.rs  render.rs  srs.rs  tui_app.rs  tui_data.rs  tui_input.rs  tui_render.rs  tui_state.rs
crates/srs-gov/tests/: flow.rs
crates/srs-projection/: Cargo.toml
crates/srs-projection/src/: lib.rs
crates/srs-repository/: Cargo.toml
crates/srs-repository/src/: analysis.rs  blueprint_brief_service.rs  blueprint_schema_service.rs  blueprint_service.rs  container_service.rs  container_view_service.rs  detect.rs  diff.rs  discovery_service.rs  error.rs  extension_service.rs  index.rs  json_store.rs  lib.rs  lifecycle_service.rs  loader.rs  manifest.rs  manifest_service.rs  package.rs  package_service.rs  package_types.rs  protocol_service.rs  record_label.rs  record_store.rs  relation_graph.rs  relation_service.rs  render_service.rs  repository_lifecycle.rs  repository_navigation_service.rs  repository_portability.rs  resolver.rs  revision_service.rs  services.rs  store.rs  tag_service.rs  text_projection.rs  theme_service.rs  tree_service.rs  type_schema_service.rs  validation.rs  (+3 more)
crates/srs-repository/tests/: export_srsj.rs
crates/srs-schema/: Cargo.toml
crates/srs-schema/schemas/2.0/: SHA256SUMS  manifest.json  package-bundle.json  package-manifest.json  relation-type.json  type.json
crates/srs-schema/src/: lib.rs
docs/: dogfooding.md  project-management.md
(+550 files in other folders)
