[workspace]
resolver = "2"
members = [
    "crates/srs-core",
    "crates/srs-schema",
    "crates/srs-repository",
    "crates/srs-cli",
    "crates/srs-projection",
    "crates/srs-bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/semanticops/srs"
authors = ["SemanticOps contributors"]

[workspace.dependencies]
srs-core = { path = "crates/srs-core" }
srs-schema = { path = "crates/srs-schema" }
srs-repository = { path = "crates/srs-repository" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
