[package]
name = "srs-bindings"
description = "SRS FFI bindings — Python, Node.js, WASM (future)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
srs-core = { workspace = true }
srs-repository = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# uuid "js" feature enables getrandom 0.2/js for UUID v4 generation in-browser.
uuid = { workspace = true, features = ["js"] }
# getrandom 0.3 (via ahash → jsonschema) requires both this feature and
# the getrandom_backend="wasm_js" cfg flag (set in .cargo/config.toml).
getrandom = { version = "0.3", features = ["wasm_js"] }
