[package]
name = "srs"
description = "Semantic Record System CLI — machine-facing JSON command surface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "srs"
path = "src/lib.rs"

[[bin]]
name = "srs"
path = "src/main.rs"

[dependencies]
srs-core = { workspace = true }
srs-repository = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
schemars = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
schemars = { workspace = true }
