[package]
name = "srs-core"
description = "Canonical Rust types and validation primitives for the Semantic Record System"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
