[package]
name = "srs-gov"
description = "Governance-flow exploration CLI — composes srs commands into a friendly governance verb set"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "srs-gov"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
