[package]
name = "srs-projection"
description = "SRS projections — SQL, search, graph, and database views (future)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
srs-core = { workspace = true }
srs-repository = { workspace = true }
