[package]
name = "srs-repository"
description = "SRS repository detection, file loading, package resolution, and index traversal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
srs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
