[package]
name = "srs-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pinned SRS JSON Schema artifact with validation registry"

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
jsonschema = { version = "0.29", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
